[gd_scene load_steps=7 format=3 uid="uid://r27rprratt4c"]

[ext_resource type="Script" path="res://levels/tutorial/tutorial.gd" id="1_hsq3r"]
[ext_resource type="PackedScene" uid="uid://b1w7iwiappfhy" path="res://levels/tower/tower.tscn" id="1_mktg5"]
[ext_resource type="PackedScene" uid="uid://d0ohh7w3ak5t" path="res://interactables/gold_objects/ring/ring.tscn" id="2_6pvg6"]
[ext_resource type="Theme" uid="uid://bxdf7u7xvvvni" path="res://levels/tutorial/tutorial_theme.tres" id="4_lmfe7"]
[ext_resource type="PackedScene" uid="uid://bk0rewm1revtk" path="res://interactables/lamp/lamp.tscn" id="5_brc10"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_l3ly0"]
size = Vector2(113, 64)

[node name="Tower" instance=ExtResource("1_mktg5")]
script = ExtResource("1_hsq3r")

[node name="EntryPortal" parent="." index="2"]
visible = false
start_showing = false

[node name="Hook" type="StaticBody2D" parent="." index="9"]
position = Vector2(-5, 9)
collision_layer = 2

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Hook" index="0"]
polygon = PackedVector2Array(511, -238, 527, -225, 542, -242, 527, -216)

[node name="Ring" parent="." index="10" instance=ExtResource("2_6pvg6")]
position = Vector2(521, -237)

[node name="ShelfLamp" parent="." index="13"]
visible = false

[node name="InteractableLamp" parent="." index="14" instance=ExtResource("5_brc10")]
position = Vector2(170, 317)

[node name="Sprite" parent="InteractableLamp" index="0"]
scale = Vector2(2, 2)

[node name="Collider" parent="InteractableLamp" index="1"]
polygon = PackedVector2Array(-6, -24, 0, -28, 6, -24, 12, 20, 8, 30, -8, 30, -12, 20)

[node name="PointLight2D" parent="InteractableLamp" index="2"]
enabled = false
offset = Vector2(0, 30)

[node name="ShelfArea" type="Area2D" parent="." index="15"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="ShelfArea" index="0"]
position = Vector2(586.5, 169)
shape = SubResource("RectangleShape2D_l3ly0")
debug_color = Color(0.80031, 0.182623, 0.917965, 0.42)

[node name="PerchArea" type="Area2D" parent="." index="16"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="PerchArea" index="0"]
position = Vector2(97, 170)
shape = SubResource("RectangleShape2D_l3ly0")
debug_color = Color(0.80031, 0.182623, 0.917965, 0.42)

[node name="Tutorial" type="Control" parent="." index="17"]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
theme = ExtResource("4_lmfe7")

[node name="MoveLabel" type="Label" parent="Tutorial" index="0"]
visible = false
layout_mode = 0
offset_left = 43.0
offset_top = 97.0
offset_right = 182.0
offset_bottom = 120.0
text = "Move using WASD"

[node name="GrabBeakLabel" type="Label" parent="Tutorial" index="1"]
visible = false
layout_mode = 0
offset_left = 234.0
offset_top = -347.0
offset_right = 402.0
offset_bottom = -293.0
text = "Grab things in your beak using E"
horizontal_alignment = 1
autowrap_mode = 2

[node name="GrabClawsLabel" type="Label" parent="Tutorial" index="2"]
visible = false
layout_mode = 0
offset_left = 237.0
offset_top = 134.0
offset_right = 405.0
offset_bottom = 188.0
text = "Grab things with your claws using E"
horizontal_alignment = 1
autowrap_mode = 2

[node name="BringLampSpeech" type="Label" parent="Tutorial" index="3"]
visible = false
layout_mode = 0
offset_left = 154.0
offset_top = 92.0
offset_right = 491.0
offset_bottom = 119.0
theme_type_variation = &"SpeechBubble"
text = "Crowen can you bring that lamp over here?"
horizontal_alignment = 1
autowrap_mode = 2

[node name="ShelfSpeech" type="Label" parent="Tutorial" index="4"]
visible = false
layout_mode = 0
offset_left = 203.0
offset_top = 92.0
offset_right = 435.0
offset_bottom = 119.0
theme_type_variation = &"SpeechBubble"
text = "Put it on top of the bookshelf"
horizontal_alignment = 1
autowrap_mode = 2

[node name="GetRingSpeech" type="Label" parent="Tutorial" index="5"]
visible = false
layout_mode = 0
offset_left = 186.0
offset_top = 72.0
offset_right = 451.0
offset_bottom = 125.0
theme_type_variation = &"SpeechBubble"
text = "Go get that gold ring up there and put it in the cauldron"
horizontal_alignment = 1
autowrap_mode = 2

[node name="GetGoldSpeech" type="Label" parent="Tutorial" index="6"]
visible = false
layout_mode = 0
offset_left = 155.0
offset_top = 72.0
offset_right = 485.0
offset_bottom = 125.0
theme_type_variation = &"SpeechBubble"
text = "I need more gold! Go through the portal and bring me more for my potion"
horizontal_alignment = 1
autowrap_mode = 2

[node name="Crow" parent="." index="18"]
position = Vector2(93, 165)

[connection signal="crow_went_through_portal" from="ExitPortal" to="." method="_on_go_through_portal"]
[connection signal="picked_up" from="Ring" to="." method="_on_ring_picked_up"]
[connection signal="body_entered" from="Cauldron/CauldronArea" to="." method="_on_ring_put_in_cauldron"]
[connection signal="picked_up" from="InteractableLamp" to="." method="_on_lamp_picked_up"]
[connection signal="body_entered" from="ShelfArea" to="." method="_on_lamp_put_on_bookshelf"]
[connection signal="body_exited" from="PerchArea" to="." method="_on_left_perch"]

[editable path="HangingLamp"]
[editable path="ShelfLamp"]
[editable path="InteractableLamp"]
